fix hr issues in menu and align icons

--- a/css/output.css
+++ b/css/output.css
@@ -14,13 +14,13 @@ body {
   left: 0;
 }
 .header i {
-  font-size: 27px;
+  font-size: 25px;
   color: gray;
   margin-top: 26px;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 .header .icons {
-  margin-left: 150px;
+  margin-right: 50px;
 }
 
 .flex-container {
@@ -169,9 +169,12 @@ nav {
   display: none;
 }
 nav ul {
-  margin: 0;
+  margin-left: 180px;
   padding: 0;
   list-style: none;
+}
+nav ul hr {
+  margin-left: 10px;
 }
 nav ul li {
   margin-top: 1px;
