--- a/scss/input.scss
+++ b/scss/input.scss
@@ -16,13 +16,13 @@ body {
   top: 0;
   left: 0;
   i {
-    font-size: 27px;
+    font-size: 25px;
     color: darken($tychoGray, 40);
     margin-top: 26px;
-    margin-right: 15px;
+    margin-right: 10px;
   }
   .icons {
-    margin-left: 150px;
+    margin-right: 50px;
   }
 }
 
@@ -173,9 +173,13 @@ nav {
   left: 0;
   display: none;
   ul {
-    margin: 0;
+    // margin: 0;
+    margin-left: 180px;
     padding: 0;
     list-style: none;
+    hr {
+    margin-left: 10px;
+    }
     li {
       margin-top: 1px;
       margin-bottom: 1em;
